Tue May 14 19:58:17 2013  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* ext/dl/lib/dl/func.rb (DL::Function#call): check tainted when
	  $SAFE > 0.
	* ext/fiddle/function.c (function_call): check tainted when $SAFE > 0.
	* test/fiddle/test_func.rb (module Fiddle): add test for above.


Tue May 14 14:51:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (INTPTR_MAX, INTPTR_MIN, UINTPTR_MAX): split
	  from intptr_t and uintptr_t, since VC9 defines the latter only in
	  crtdefs.h.

Tue May 14 12:21:28 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (NET_LUID): mingw may have NET_LUID and not defined
	  _IFDEF_.

Tue May 14 03:33:17 2013  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_str_new_frozen): remove debug print.

Tue May 14 03:22:51 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: enable to generate write barrier protected
	  arrays (T_ARRAY).

Tue May 14 03:21:42 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: enable to generate write barrier protected
	  strings (T_STRING).

Tue May 14 03:19:59 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: enable to generate write barrier protected
	  objects (T_OBJECT).

Tue May 14 03:17:15 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: enable to generate write barrier protected
	  objects for numeric types (Float, Complex, Rational, Bignum).

Tue May 14 03:10:59 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: enable RGENGC (USE_RGENGC)
	  but no type creates write protected (sunny) objects
	  (RGENGC_WB_PROTECTED_* == 0).

Tue May 14 02:47:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: support RGENGC. [ruby-trunk - Feature #8339]
	  See this ticket about RGENGC.

	* gc.c: Add several flags:
	  * RGENGC_DEBUG: if >0, then prints debug information.
	  * RGENGC_CHECK_MODE: if >0, add assertions.
	  * RGENGC_PROFILE: if >0, add profiling features.
	    check GC.stat and GC::Profiler.
